# weiback-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.yaml  package.json  tsconfig.json
.github/workflows/: release.yml  rust-clippy.yml
res/: full.json  full.json.gz.REMOVED.git-id  one.json
res/templates/: page.html  post.html  posts.html
src/: App.vue  app.rs  args.rs  authentication.rs  config.rs  core.rs  data.rs  emoticon.rs  error.rs  executor.rs  exporter.rs  fetched_data.rs  fetcher.rs  generator.rs  gui.rs  html_generator.rs  lib.rs  login.rs  long_text.rs  main.rs  message.rs  meta_data.rs  models.rs  network.rs  persister.rs  picture.rs  ports.rs  post.rs  post_processor.rs  resource_manager.rs  router.ts  sql_data.rs  storage.rs  task_handler.rs  ui.rs  user.rs  utils.rs  web_fetcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: rvo.rs
src-tauri/src/: config.rs  error.rs  exporter.rs  lib.rs  message.rs  utils.rs
src-tauri/src/core/: mod.rs  task.rs  task_handler.rs
src-tauri/src/exporter/: mod.rs
src-tauri/src/media_downloader/: mod.rs
src-tauri/src/processing/: html_generator.rs  mod.rs
src-tauri/src/storage/: mod.rs  processer.rs
src-tauri/src/tauri/: mod.rs
src-tauri/templates/: post.html  posts.html
src/app/: emoticon.rs  mod.rs  models.rs  options.rs  ports.rs  search_args.rs  service.rs  task_handler.rs  task_proxy.rs
src/app/models/: long_text.rs  picture.rs  post.rs  user.rs
src/app/service/: emoticon.rs  task_handler.rs
src/core/: mod.rs  task_handler.rs  task_proxy.rs
src/exporter/: html_generator.rs  mod.rs
src/media_downloader/: mod.rs
src/models/: long_text.rs  mod.rs  picture.rs  post.rs  user.rs
src/network/: auth.rs  http_client.rs  picture_client.rs  picture_internal.rs  post_internal.rs  user_client.rs  user_internal.rs
src/processing/: html_generator.rs  mod.rs
src/storage/: mod.rs  picture_client.rs  picture_storage.rs  post_client.rs  post_storage.rs  processer.rs  user_storage.rs
src/task_handler/: mod.rs
src/ui/: executor.rs  mod.rs  task_proxy.rs
src/ui/tabs/: about_tab.rs  backup_fav_tab.rs  backup_user_tab.rs  export_from_local_tab.rs  mod.rs
src/views/: FavoritesBackup.vue  LocalExport.vue  OnlineBackup.vue  Settings.vue  User.vue  UserBackup.vue
tauri-app/: .prettierignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.tsx  AppThemeProvider.tsx  LRU.ts  ThemeContext.tsx  cache.ts  listItems.tsx  main.ts  main.tsx  router.tsx  types.ts  utils.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: error.rs  lib.rs  status_manager.rs
tauri-app/src/components/: CloseConfirmDialog.tsx  Emoji.tsx  FullSizeImage.tsx  GlobalTaskProgress.tsx  LRU.ts  MediaDownloaderStatus.tsx  PostDisplay.tsx  PostPreviewModal.tsx  SnackbarAction.tsx  UpdateBanner.tsx  UserSelector.tsx
tauri-app/src/hooks/: ThemeContext.ts  useBlobLoader.ts  useCompletionNotifier.ts  useImageLoader.ts  useTaskEvents.ts  useTaskPolling.ts  useVideoLoader.ts
tauri-app/src/lib/: api.ts  updateApi.ts
tauri-app/src/store/: theme.ts
tauri-app/src/stores/: authStore.ts  taskStore.ts  updateStore.ts
tauri-app/src/types/: config.ts  index.ts  posts.ts  tasks.ts  user.ts
tauri-app/src/views/: About.tsx  ContentExplorer.tsx  DataManage.tsx  FavoritesBackup.tsx  FavoritesBackup.vue  LocalExport.tsx  LocalExport.vue  OnlineBackup.tsx  OnlineBackup.vue  Settings.tsx  User.tsx  UserBackup.tsx  UserBackup.vue
templates/: posts.html
tools/: Cargo.toml
tools/src/: db-upgrade-tool.rs  upgrader.rs
tools/src/upgrader/: old_models.rs  old_picture.rs  old_post.rs  old_user.rs
weiback/: Cargo.toml  build.rs
weiback/examples/: magic_args.rs  validate_images.rs
weiback/migrations/: 20260121073402_weiback.sql  20260301075836_add_tag_struct_to_posts.sql  20260301092022_add_fts_to_posts.sql
weiback/src/: api.rs  builder.rs  client.rs  config.rs  core.rs  dev_client.rs  emoji_map.rs  error.rs  exporter.rs  html_generator.rs  image_validator.rs  lib.rs  media_downloader.rs  message.rs  mock.rs  models.rs  storage.rs  utils.rs
weiback/src/api/: emoji.rs  favorites.rs  internal.rs  profile_statuses.rs  statuses_show.rs
weiback/src/api/internal/: page_info.rs  post.rs  url_struct.rs  user.rs
weiback/src/core/: mod.rs  post_processer.rs  task.rs  task_handler.rs  task_manager.rs
weiback/src/html_generator/: view_model.rs
weiback/src/mock/: api.rs  exporter.rs  media_downloader.rs  mod.rs  storage.rs
weiback/src/models/: build_comments.rs  common.rs  err_response.rs  mix_media_info.rs  page_info.rs  pic_infos.rs  picture.rs  post.rs  tag_struct.rs  url_struct.rs  user.rs  video.rs
weiback/src/processing/: html_generator.rs  mod.rs
weiback/src/storage/: database.rs  internal.rs  mod.rs  picture_storage.rs  post_internal.rs  post_storage.rs  processer.rs  user_internal.rs  user_storage.rs  video_storage.rs
weiback/src/storage/internal/: picture.rs  post.rs  user.rs  video.rs
weiback/templates/: page.html  page_static.html  post.html  posts.html
weiback/tests/data/: emoji.json  favorites.json  long_text.json  profile_statuses.json  statuses_show.json  web_emoji.json
