[workspace]
members = ["weiback", "tauri-app/src-tauri", "tools"]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1"
chrono = { version = "0.4", default-features = false }
dirs = "6"
env_logger = "0.11"
futures = "0.3"
itertools = "0.14"
log = "0.4"
once_cell = "1"
regex = "1"
reqwest = "0.12"
tauri = "2"
tauri-build = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["serde_derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tera = "1"
thiserror = "2"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
url = "2"
uuid = { version = "1", features = ["v7"] }
weibosdk-rs = { path = "../weibosdk-rs" }
