[workspace]
members = ["weiback", "tauri-app/src-tauri", "tools"]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
futures = "0.3"
itertools = "0.14"
image = ">=0.21,<0.24"
img_hash = "3.2"
lazy_static = "1"
log = "0.4"
once_cell = "1"
regex = "1"
reqwest = "0.13"
tauri = "2"
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
toml = "0.9"
serde = { version = "1", features = ["serde_derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tera = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
walkdir = "2"
weibosdk-rs = { git = "https://github.com/Shapooo/weibosdk-rs.git", rev = "4e176a1b93d3b4f6b471828e0ae8f54bd369501d" }
