[package]
name = "weiback-rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weiback"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, optional = true }
weibosdk-rs = { workspace = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"
weibosdk-rs = { workspace = true, features = ["test-mocks"] }

[features]
dev-mode = [ "dep:uuid" ]
