[package]
name = "weiback-rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weiback"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
img_hash = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, optional = true }
weibosdk-rs = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
mockito = "1"
tempfile = "3"
walkdir = { workspace = true }
weibosdk-rs = { workspace = true, features = ["test-mocks"] }

[features]
dev-mode = ["dep:uuid"]
internal-models = []

[build-dependencies]
image = { workspace = true }
img_hash = { workspace = true }
