[package]
name = "tauri-app"
version.workspace = true
edition.workspace = true
default-run = "weiback-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "weiback-rs"
path = "src/bin/weiback-rs/main.rs"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
weibosdk-rs = { workspace = true }
weiback-rs = { path = "../../weiback" }
anyhow = "1.0.98"

[build-dependencies]
tauri-build = { version = "2", features = [] }
