[package]
name = "tauri-app"
version.workspace = true
edition.workspace = true
default-run = "weiback-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "weiback-rs"
path = "src/bin/weiback-rs/main.rs"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
weiback-rs = { path = "../../weiback" }
weibosdk-rs = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[features]
"dev-mode" = ["weiback-rs/dev-mode"]
